Update index.html to v1

--- a/index.html
+++ b/index.html
@@ -272,6 +272,10 @@
         .media-jornada {
             color: #fcd34d; /* Tailwind amber-300 */
         }
+        .version-text {
+            font-size: 0.8rem;
+            color: #ccc;
+        }
     </style>
 </head>
 <body>
@@ -285,6 +289,7 @@
     <!-- Pantalla de PIN y Usuario -->
     <div id="pin-screen" class="screen">
         <h2>Acceso al Bote</h2>
+        <span class="version-text">Versión V1</span>
         <div class="input-group">
             <select id="username-select">
                 <option value="" disabled selected>Selecciona tu nombre</option>
